# SmartBrain_3000

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
app/: pyproject.toml
app/smartbrain_3000/: __init__.py  account.py  agent.py  agent_routes.py  approvals.py  audit.py  chat_routes.py  consent.py  data_routes.py  db.py  devices.py  devices_routes.py  docsummaries.py  email_account.py  email_oauth.py  email_routes.py  gateway.py  gmail.py  history.py  history_routes.py  identity.py  ingest.py  kb.py  kb_routes.py  kbindex.py  keyvault.py  local_models_routes.py  main.py  mcp_routes.py  mcp_server.py  memory.py  memory_routes.py  models_routes.py  netguard.py  oauth_loopback.py  pairing_code.py  pairing_host.py  planner.py  planner_routes.py  remote_config.py  (+17 more)
app/tests/: README.md  _fakegateway.py  _pdfgen.py  conftest.py  test_account.py  test_agent.py  test_approvals.py  test_audit.py  test_backup_recovery.py  test_chat.py  test_concurrency.py  test_consent.py  test_data.py  test_devices.py  test_docsummaries.py  test_email.py  test_embeddings.py  test_gateway_serialization.py  test_history.py  test_identity.py  test_ingest.py  test_ingest_bulk.py  test_ingest_office.py  test_integration_agent.py  test_integration_egress.py  test_integration_email_oauth.py  test_integration_gateway.py  test_integration_gmail_send.py  test_kb.py  test_kb_provenance.py  test_kbindex.py  test_keyvault.py  test_knowledge_pdf_e2e.py  test_knowledge_real_embed.py  test_main.py  (+28 more)
(+2684 files in other folders)
