[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartbrain_3000"
version = "0.0.1"
description = "SmartBrain_3000 — a fully-local, single-user personal AI assistant."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "duckdb>=1.1",
    "cryptography>=42",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "mcp>=1.2",
    "pypdf>=4.0",
    "trafilatura>=1.12",
    "aiortc>=1.14",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smartbrain_3000*"]

[tool.setuptools.package-data]
# Recursive: the SvelteKit build nests hashed bundles under web/_app/** — a
# non-recursive glob would omit them from the wheel (the app would 404 its JS).
smartbrain_3000 = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
